--- a/spark/dataframe.ipynb
+++ b/spark/dataframe.ipynb
@@ -10,6 +10,37 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "cf0fdab7-32f3-4492-abba-66f133d3ed4a",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "Cell 1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.createDataFrame([\n",
+    "    (1, 'January'),\n",
+    "    (2, 'January'),\n",
+    "    (3, 'January'),\n",
+    "    (4, 'January'),\n",
+    "    (5, 'February'),\n",
+    "    (6, 'February'),\n",
+    "    (7, 'February'),\n",
+    "    (8, 'February')\n",
+    "], ['week', 'month'])\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "20c7de7e-1863-433b-a9f3-5dd4fcf18794",
      "showTitle": false,
      "tableResultSettingsMap": {},
